[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "logits-lsp"
version = "0.1.0"
description = "Logits observation tool for language models"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "tokenizers>=0.13.0",
    "accelerate>=0.20.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
]

[tool.setuptools.packages.find]
include = ["LSP", "LSP.*", "Observation", "Observation.*"]

[tool.uv]
dev-dependencies = []